resources/services/managed-connectors/production/cos-fleet-manager.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: cos-fleet-manager
  name: cos-fleet-manager-production
spec:
  host: wxn4abbc8bqvxcy6unfe.api.openshift.com
  to:
    kind: Service
    name: cos-fleet-manager-envoy
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
